[package]
name = "boop"
description = "A glorified calculator for all your numbery needs."
authors = ["Leon Davis <leonskidev@pm.me>", "Shane Vandegrift <vandesm14@gmail.com>"]
license = "MIT OR Apache-2.0"

version = "0.1.0"
edition = "2021"

[dependencies]
fixed = "1"
lasso = "0.6.0"
thiserror = "1"

clap = { version = "4", features = ["derive"] }
reedline = { version = "0.14.0", features = ["clipboard"] }
# ariadne = "0.1.5"

[dependencies.chumsky]
git = "https://github.com/zesterer/chumsky"
rev = "6b12d98de5b0d53353d0c4cdcb24554494cb6059"
