[package]
name = "boop"
description = "A glorified calculator for all your numbery needs."
authors = ["Leon Davis <leonskidev@pm.me>", "Shane Vandegrift <vandesm14@gmail.com>"]
license = "MIT OR Apache-2.0"

version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = "0.4.3"
num-rational = "0.4.1"

# thiserror = "1"
